# haskell-ini-parser

./: parser.cabal  stack.yaml  test
src/: Main.hs
