name:                parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/voivoid/parser#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          voivoid@mail.ru
copyright:           Sergey Ivanov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, megaparsec
